// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MainSearch /> empty search snapshot 1`] = `
<div
  className="sans-serif"
>
  <nav
    className="bg-near-black ph5 pv3 ttu f5 fw6"
  >
    <a
      className="link underline-hover near-white"
      href="/"
      onClick={[Function]}
      target={undefined}
    >
      Home
    </a>
  </nav>
  <div
    className="pa4 center w-60"
  >
    <div
      className="tc mb5"
    >
      <h1
        className="f-headline mt0 mb0"
      >
        Welcome to 
        <br />
         Movie Search
      </h1>
      <p
        className="f3"
      >
        The world's premiere movie search tool built with React and Redux!
      </p>
    </div>
    <input
      className="db center w-100 ph2 pv3 f4 lh-solid"
      onChange={[Function]}
      placeholder="Wall-E"
      type="text"
    />
    <ul
      className="list ph0 flex flex-wrap"
    />
  </div>
</div>
`;

exports[`<MainSearch /> laoding snanpshot 1`] = `
<div
  className="sans-serif"
>
  <nav
    className="bg-near-black ph5 pv3 ttu f5 fw6"
  >
    <a
      className="link underline-hover near-white"
      href="/"
      onClick={[Function]}
      target={undefined}
    >
      Home
    </a>
  </nav>
  <div
    className="pa4 center w-60"
  >
    <div
      className="tc mb5"
    >
      <h1
        className="f-headline mt0 mb0"
      >
        Welcome to 
        <br />
         Movie Search
      </h1>
      <p
        className="f3"
      >
        The world's premiere movie search tool built with React and Redux!
      </p>
    </div>
    <input
      className="db center w-100 ph2 pv3 f4 lh-solid"
      onChange={[Function]}
      placeholder="Wall-E"
      type="text"
    />
    <div
      className="tc pa4"
    >
      <svg
        fill="#D5008F"
        height={200}
        viewBox="0 0 105 105"
        width={200}
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="12.5"
          cy="12.5"
          r="12.5"
        >
          <animate
            attributeName="fill-opacity"
            begin="0s"
            calcMode="linear"
            dur="1s"
            repeatCount="indefinite"
            values="1;.2;1"
          />
        </circle>
        <circle
          cx="12.5"
          cy="52.5"
          fill-opacity=".5"
          r="12.5"
        >
          <animate
            attributeName="fill-opacity"
            begin="100ms"
            calcMode="linear"
            dur="1s"
            repeatCount="indefinite"
            values="1;.2;1"
          />
        </circle>
        <circle
          cx="52.5"
          cy="12.5"
          r="12.5"
        >
          <animate
            attributeName="fill-opacity"
            begin="300ms"
            calcMode="linear"
            dur="1s"
            repeatCount="indefinite"
            values="1;.2;1"
          />
        </circle>
        <circle
          cx="52.5"
          cy="52.5"
          r="12.5"
        >
          <animate
            attributeName="fill-opacity"
            begin="600ms"
            calcMode="linear"
            dur="1s"
            repeatCount="indefinite"
            values="1;.2;1"
          />
        </circle>
        <circle
          cx="92.5"
          cy="12.5"
          r="12.5"
        >
          <animate
            attributeName="fill-opacity"
            begin="800ms"
            calcMode="linear"
            dur="1s"
            repeatCount="indefinite"
            values="1;.2;1"
          />
        </circle>
        <circle
          cx="92.5"
          cy="52.5"
          r="12.5"
        >
          <animate
            attributeName="fill-opacity"
            begin="400ms"
            calcMode="linear"
            dur="1s"
            repeatCount="indefinite"
            values="1;.2;1"
          />
        </circle>
        <circle
          cx="12.5"
          cy="92.5"
          r="12.5"
        >
          <animate
            attributeName="fill-opacity"
            begin="700ms"
            calcMode="linear"
            dur="1s"
            repeatCount="indefinite"
            values="1;.2;1"
          />
        </circle>
        <circle
          cx="52.5"
          cy="92.5"
          r="12.5"
        >
          <animate
            attributeName="fill-opacity"
            begin="500ms"
            calcMode="linear"
            dur="1s"
            repeatCount="indefinite"
            values="1;.2;1"
          />
        </circle>
        <circle
          cx="92.5"
          cy="92.5"
          r="12.5"
        >
          <animate
            attributeName="fill-opacity"
            begin="200ms"
            calcMode="linear"
            dur="1s"
            repeatCount="indefinite"
            values="1;.2;1"
          />
        </circle>
      </svg>
    </div>
  </div>
</div>
`;

exports[`<MainSearch /> show search results snapshot 1`] = `
<div
  className="sans-serif"
>
  <nav
    className="bg-near-black ph5 pv3 ttu f5 fw6"
  >
    <a
      className="link underline-hover near-white"
      href="/"
      onClick={[Function]}
      target={undefined}
    >
      Home
    </a>
  </nav>
  <div
    className="pa4 center w-60"
  >
    <div
      className="tc mb5"
    >
      <h1
        className="f-headline mt0 mb0"
      >
        Welcome to 
        <br />
         Movie Search
      </h1>
      <p
        className="f3"
      >
        The world's premiere movie search tool built with React and Redux!
      </p>
    </div>
    <input
      className="db center w-100 ph2 pv3 f4 lh-solid"
      onChange={[Function]}
      placeholder="Wall-E"
      type="text"
    />
    <ul
      className="list ph0 flex flex-wrap"
    >
      <li
        className="w-20 pa2"
      >
        <div
          className="tc"
        >
          <img
            alt="test one"
            className="db w-100 ba b--black-10 mb3"
            src="test-url-227x227.png"
          />
          <a
            className="link underline-hover near-black f5 fw6"
            href="/movie/13"
            onClick={[Function]}
            target={undefined}
          >
            test one
          </a>
        </div>
      </li>
      <li
        className="w-20 pa2"
      >
        <div
          className="tc"
        >
          <img
            alt="test two"
            className="db w-100 ba b--black-10 mb3"
            src="another-test-url-227x227.png"
          />
          <a
            className="link underline-hover near-black f5 fw6"
            href="/movie/26"
            onClick={[Function]}
            target={undefined}
          >
            test two
          </a>
        </div>
      </li>
    </ul>
  </div>
</div>
`;
